Added trainees information + Improve icons

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </nav>
   <!--/ Nav End /-->
 
-  <!--/ Home Star /-->
+  <!--/ Section Home Star /-->
   <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
@@ -79,10 +79,10 @@
       </div>
     </div>
   </div>
-  <!--/ Home End /-->
+  <!--/ Section Home End /-->
 
-  <!--/ About Star /-->
-  <section id="about" class="about-mf sect-pt4 route">
+  <!--/ Section About Star /-->
+  <section id="about" class="about-mf sect-4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -140,10 +140,10 @@
       </div>
     </div>
   </section>
-  <!--/ About End /-->
+  <!--/ Section About End /-->
 
-  <!--/ Soft Skills /-->
-  <section id="softskills" class="paralax-mf services-mf sect-pt4 sect-mt4 route bg-image" style="background-image: url(img/overlay-bg.jpg)">
+  <!--/ Section Soft Skills /-->
+  <section id="softskills" class="paralax-mf sect-4 route bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -163,7 +163,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-comment-dots"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Effective Communication</h2>
@@ -173,7 +173,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-user-tie"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Leadership and Team Management</h2>
@@ -183,7 +183,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-puzzle-piece"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Problem-Solving and Critical Thinking</h2>
@@ -193,7 +193,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-chess"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Strategic and Analytical Mindset</h2>
@@ -203,7 +203,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-heart"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Collaboration and Emotional Intelligence</h2>
@@ -213,7 +213,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-water"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Adaptability and Flexibility</h2>
@@ -223,7 +223,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-graduation-cap"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Continuous Learning and Development</h2>
@@ -233,7 +233,7 @@
         <div class="col-md-3">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
+              <span class="ico-circle"><i class="fas fa-calendar-alt"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Organizational Skills and Time Management</h2>
@@ -243,10 +243,10 @@
       </div>
     </div>
   </section>
-  <!--/ Soft Skills End /-->
+  <!--/ Section Soft Skills End /-->
 
-  <!--/ Work Experience Star /-->
-  <section id="experience" class="services-mf sect-pt4 route">
+  <!--/ Section Work Experience Star /-->
+  <section id="experience" class="sect-4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -337,10 +337,10 @@
 			</div>
     </div>
   </section>
-  <!--/ Work Services End /-->
+  <!--/ Section Work Services End /-->
 
-  <!--/ Education Star /-->
-  <section id="education" class="services-mf sect-pt4 route">
+  <!--/ Section Education Star /-->
+  <section id="education" class="bg-white sect-4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -400,9 +400,9 @@
             <div class="timeline-badge"></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h3 class="timeline-title">Applications Development Higher Technical Certificate</h3>
-                <h5 class="timeline-title">2017 - 2019</h5>
-                <span class="company">CPIFP Los Enlaces, Zaragoza, Spain</span>
+                <h3 class="timeline-title">Angular Development Training</h3>
+                <h5 class="timeline-title">2022</h5>
+                <span class="company">Udemy</span>
               </div>
             </div>
           </li>
@@ -410,9 +410,9 @@
             <div class="timeline-badge"></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h3 class="timeline-title">Animation 3D, Games and Interactive Environments Higher Technical Certificate</h3>
-                <h5 class="timeline-title">2015 - 2017</h5>
-                <span class="company">CPIFP Los Enlaces, Zaragoza, Spain</span>
+                <h3 class="timeline-title">Business Intelligence</h3>
+                <h5 class="timeline-title">2021</h5>
+                <span class="company">Nanfor Iberica SL</span>
               </div>
             </div>
           </li>
@@ -420,9 +420,39 @@
             <div class="timeline-badge"></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h3 class="timeline-title">Bachelor of Science</h3>
-                <h5 class="timeline-title">2013 - 2015</h5>
-                <span class="company">IES Benjamín Jarnes, Fuentes de Ebro, Spain</span>
+                <h3 class="timeline-title">ASP .NET Applications Development Training</h3>
+                <h5 class="timeline-title">2019</h5>
+                <span class="company">Hiberus University, Zaragoza, Spain</span>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-inverted animate-box">
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h3 class="timeline-title">Web Development Training</h3>
+                <h5 class="timeline-title">2019</h5>
+                <span class="company">Hiberus University, Zaragoza, Spain</span>
+              </div>
+            </div>
+          </li>
+          <li class="animate-box timeline-unverted">
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h3 class="timeline-title">Flutter Applications Development Training</h3>
+                <h5 class="timeline-title">2019</h5>
+                <span class="company">Udemy</span>
+              </div>
+            </div>
+          </li>
+          <li class="timeline-inverted animate-box">
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h3 class="timeline-title">ASP .NET Applications Development Training</h3>
+                <h5 class="timeline-title">2018</h5>
+                <span class="company">Advanced Technology Center, Zaragoza, Spain</span>
               </div>
             </div>
           </li>
@@ -433,7 +463,7 @@
   </section>
   <!--/ Work Services End /-->
 
-  <div class="section-counter sect-mt4 paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
+  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -691,8 +721,8 @@
     </div>
   </div>
 
-  <!--/ Section Blog Star /-->
-  <section id="blog" class="blog-mf sect-pt4 route">
+  <!--/ Section Portfolio Star /-->
+  <section id="portfolio" class="blog-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -804,7 +834,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section Blog End /-->
+  <!--/ Section Portfolio End /-->
 
   <!--/ Section Contact-Footer Star /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
@@ -871,16 +901,16 @@
                       mollitia inventore?
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> La Lista de Schidler 9, Zaragoza, Spain, 50019</li>
-                      <li><span class="ion-ios-telephone"></span> (+34) 609529495</li>
-                      <li><span class="ion-email"></span> dliertavilluendas@gmail.com</li>
+                      <li><span><i class="fas fa-map-marker-alt"></i></span> La Lista de Schidler 9, Zaragoza, Spain, 50019</li>
+                      <li><span><i class="fa-solid fa-phone"></i></span> (+34) 609529495</li>
+                      <li><span><i class="fa-solid fa-envelope"></i></span> dliertavilluendas@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="fa fa-linkedin"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href=""><span class="ico-circle"><i class="fa-brands fa-linkedin"></i></i></span></a></li>
+                      <li><a href=""><span class="ico-circle"><i class="fa-brands fa-github"></i></span></a></li>
+                      <li><a href=""><span class="ico-circle"><i class="fa-brands fa-instagram"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -925,6 +955,9 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/3c60e71f1a.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
