Added new resume version + Start adding certifications section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="css/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
@@ -464,7 +464,7 @@
   <!--/ Section Education End /-->
 
   <!-- Section certifications Start -->
-  <section id="certifications" class="sect-4 route">
+  <section id="certifications" class="sect-4 route clients">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -479,45 +479,47 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12 col-md-offset-0 owl-carousel owl-theme">
-          <div class="item">
-            <a href="#">
-              <img src="img/certifications/c1.png" alt="brand-image" />
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="img/certifications/c2.png" alt="brand-image" />
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="img/certifications/c3.png" alt="brand-image" />
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="img/certifications/c4.jpg" alt="brand-image" />
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="img/certifications/c5.jpg" alt="brand-image" />
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="img/certifications/c6.jpg" alt="brand-image" />
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <img src="img/certifications/c7.png" alt="brand-image" />
-            </a>
-          </div>
-        </div>
-      </div>
+      <div class="clients-area">
+				<div class="container">
+					<div class="owl-carousel owl-theme" id="client">
+						<div class="item">
+							<a href="#">
+								<img src="img/certifications/c1.png" alt="brand-image" />
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<img src="img/certifications/c2.png" alt="brand-image" />
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<img src="img/certifications/c3.png" alt="brand-image" />
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<img src="img/certifications/c4.jpg" alt="brand-image" />
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<img src="img/certifications/c5.jpg" alt="brand-image" />
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<img src="img/certifications/c6.jpg" alt="brand-image" />
+							</a>
+						</div>
+						<div class="item">
+							<a href="#">
+								<img src="img/certifications/c7.png" alt="brand-image" />
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
     </div>
   </section>
   <!--/ Section Certifications End -->
@@ -791,7 +793,7 @@
   <script src="lib/easing/easing.min.js"></script>
   <script src="lib/counterup/jquery.waypoints.min.js"></script>
   <script src="lib/counterup/jquery.counterup.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
   <script src="lib/lightbox/js/lightbox.min.js"></script>
   <script src="lib/typed/typed.min.js"></script>
   <!-- Contact Form JavaScript File -->
