Added information + Fix responsive issues

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </nav>
   <!--/ Nav End /-->
 
-  <!--/ Section Home Star /-->
+  <!--/ Section Home Start /-->
   <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
@@ -81,7 +81,7 @@
   </div>
   <!--/ Section Home End /-->
 
-  <!--/ Section About Star /-->
+  <!--/ Section About Start /-->
   <section id="about" class="about-mf sect-4 route">
     <div class="container">
       <div class="row">
@@ -90,12 +90,12 @@
             <div class="row">
               <div class="col-sm-12 title-box-2">
                 <div class="row">
-                  <div class="col-sm-6 col-md-5">
+                  <div class="col-md-12 col-lg-6">
                     <div class="about-img">
                       <img src="img/profile-picture.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
-                  <div class="col-sm-6 col-md-7">
+                  <div class="col-md-12 col-lg-6">
                     <div class="about-me pt-4 pt-md-0">
                       <div class="title-box-2">
                         <h5 class="title-left">
@@ -106,7 +106,7 @@
                         Experienced Senior Software Engineer with a passion for learning and teaching cutting-edge technologies. Known for leading development initiatives, designing scalable software solutions, and advocating for best coding practices. Excels in a dynamic environment, continuously exploring new technologies and methodologies, and enthusiastically sharing knowledge with peers.
                       </p>
                       <p class="lead">
-                        Experienced Senior Software Engineer with a passion for learning and teaching cutting-edge technologies. Known for leading development initiatives, designing scalable software solutions, and advocating for best coding practices.
+                        Outside of the tech world, I am a young, extraverted enthusiast who loves to travel, embracing the diversity of cultures and experiences our world offers. This passion for exploration not only enriches my personal life but also inspires my professional work, bringing fresh insights and innovative approaches to every project I touch.
                       </p>
                     </div>
                   </div>
@@ -114,19 +114,19 @@
               </div>
               <div class="col-sm-12">
                 <div class="row">
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-md-12 col-lg-4">
                     <h4>Phone</h4>
                     <p class="lead">
                       (+34) 609529495
                     </p>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-md-12 col-lg-4">
                     <h4>Email</h4>
                     <p class="lead">
                       dliertavilluendas@gmail.com
                     </p>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-md-12 col-lg-4">
                     <h4>Address</h4>
                     <p class="lead">
                       Zaragoza, Spain, 50019
@@ -142,7 +142,7 @@
   </section>
   <!--/ Section About End /-->
 
-  <!--/ Section Soft Skills /-->
+  <!--/ Section Soft Skills Start /-->
   <section id="softskills" class="paralax-mf sect-4 route bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
@@ -160,7 +160,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-comment-dots"></i></span>
@@ -170,7 +170,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-users"></i></span>
@@ -180,7 +180,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-puzzle-piece"></i></span>
@@ -190,7 +190,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-chess"></i></span>
@@ -200,7 +200,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-heart"></i></span>
@@ -210,7 +210,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-wind"></i></span>
@@ -220,7 +220,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-graduation-cap"></i></span>
@@ -230,7 +230,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-calendar-alt"></i></span>
@@ -245,7 +245,7 @@
   </section>
   <!--/ Section Soft Skills End /-->
 
-  <!--/ Section Work Experience Star /-->
+  <!--/ Section Work Experience Start /-->
   <section id="experience" class="sect-4 route">
     <div class="container">
       <div class="row">
@@ -275,8 +275,9 @@
 									<h5 class="timeline-title">January 2023 – Present</h5>
 									<span class="company">Visma Labs Spain (RAET), Madrid, Spain (Full Remote)</span>
 								</div>
+                <h5 class="timeline-title">Domain APIs Project</h5>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>In the Domain APIs Project at Visma, I led efforts to enhance a microservices-based solution, significantly optimizing ETL processes and data access with .NET, Kubernetes, and RabbitMQ. I designed a scalable architecture and a generic Recruitment API, achieving major efficiency gains and cost reductions. My role also included infrastructure enhancement, CI/CD process refinement, and team mentoring, contributing to improved system reliability and team growth.</p>
 								</div>
 							</div>
 						</li>
@@ -288,8 +289,9 @@
 									<h5 class="timeline-title">September 2022 – January 2023</h5>
 									<span class="company">Kabel / Avanade, Madrid, Spain (Full Remote)</span>
 								</div>
+                <h5 class="timeline-title">SGS Project</h5>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>In the SGS Project at Kabel, I led a pivotal Proof of Concept (PoC) as a Senior Software Engineer, helping to design and implement a new enterprise architecture solution for generic service integration and communication using Azure API Management. This collaboration with the SGS architecture team and in-depth requirement analysis ensured the PoC's alignment and effectiveness, laying the groundwork for Kabel's potential partnership with SGS. I successfully drove the project to completion, provided mentorship to the development team, and innovated a generic solution for CI/CD applications, demonstrating significant expertise in Azure-based development and process standardization.</p>
 								</div>
 							</div>
 						</li>
@@ -301,8 +303,14 @@
 									<h5 class="timeline-title">July 2021 – September 2022</h5>
 									<span class="company">Visma Labs Spain (RAET), Madrid, Spain (Full Remote)</span>
 								</div>
+                <h5 class="timeline-title">MyYouforce Project</h5>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>In the MyYouforce Project, I was responsible for developing and maintaining a crucial HR process portal, integrating both backend and frontend microservices with .NET and Angular, and managing SQL/NoSQL databases in Azure. My role extended to performing DevOps tasks, implementing CI/CD practices with Azure DevOps, Docker, Kubernetes, and Terraform, ensuring seamless deployment and scalability.</p>
+								</div>
+              </br>
+                <h5 class="timeline-title">Domain APIs Project</h5>
+								<div class="timeline-body">
+									<p>In the Domain APIs Project, my contribution was key to the development and upkeep of a microservices-based solution, aiding in the architecture's design and implementation with a focus on Domain-Driven Design and clean architecture principles. I also took on Agile leadership roles, enhancing project management, and applied CI/CD practices to manage databases and deploy services efficiently, demonstrating versatility and leadership in high-stakes environments.</p>
 								</div>
 							</div>
 						</li>
@@ -314,8 +322,14 @@
 									<h5 class="timeline-title">September 2019 – July 2021</h5>
 									<span class="company">Hiberus Advanced Solutions SL, Zaragoza, Spain</span>
 								</div>
+                <h5 class="timeline-title">Hiberus BIM Project</h5>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>In the Hiberus BIM Project, I developed and maintained a comprehensive Digital Management Solution for the construction sector, serving as Scrum Master to enhance team agility and task management. My responsibilities included requirement gathering, client engagement, and the mentoring of new team members. I utilized .NET for application development and managed SQL database relationships, applying Scrum and DevOps methodologies to optimize software development processes.</p>
+								</div>
+                </br>
+                <h5 class="timeline-title">Prado Museum Project</h5>
+								<div class="timeline-body">
+									<p>For the Prado Museum Project, I was instrumental in developing and managing the backend for all front-end portals, ensuring the integrity and functionality of SQL databases and creating RESTful services with .NET Framework. My role encompassed the full spectrum of database management and API service development, contributing to the seamless operation and accessibility of the museum's digital offerings.</p>
 								</div>
 							</div>
 						</li>
@@ -328,7 +342,7 @@
 									<span class="company">IDEA Consulting, Zaragoza, Spain</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>As a Junior Developer, I was engaged in developing and maintaining digital solutions for Integral Business Management, with a strong focus on SQL Server database management. I played a key role in developing an internal project management solution, significantly improving project tracking and reporting capabilities. My responsibilities also included analyzing and defining client requirements, managing client incidents, and customizing an existing ERP system to meet specific business needs of clients, demonstrating early proficiency in software development and client services.</p>
 								</div>
 							</div>
 						</li>
@@ -339,7 +353,7 @@
   </section>
   <!--/ Section Work Experience End /-->
 
-  <!--/ Section Education Star /-->
+  <!--/ Section Education Start /-->
   <section id="education" class="bg-white sect-4 route">
     <div class="container">
       <div class="row">
@@ -524,7 +538,7 @@
   </section>
   <!--/ Section Certifications End -->
 
-  <!--/ Section Skills /-->
+  <!--/ Section Skills Start /-->
   <section id="skills" class="paralax-mf sect-4 route bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
@@ -542,7 +556,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-code"></i></span>
@@ -552,7 +566,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-project-diagram"></i></span>
@@ -562,7 +576,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-network-wired"></i></span>
@@ -572,7 +586,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-vials"></i></span>
@@ -582,7 +596,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-cloud"></i></span>
@@ -592,7 +606,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-database"></i></span>
@@ -602,7 +616,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-envelope-open-text"></i></span>
@@ -612,7 +626,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="fas fa-users-cog"></i></span>
@@ -627,7 +641,7 @@
   </section>
   <!--/ Section Skills End /-->
 
-  <!--/ Section Portfolio Star /-->
+  <!--/ Section Portfolio Start /-->
   <section id="portfolio" class="blog-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -644,9 +658,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12 col-lg-4">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-12 col-lg-4">
           <div class="card card-blog">
             <div class="card-img">
               <a href="#"><img src="img/work-1.jpg" alt="" class="img-fluid"></a>
@@ -675,14 +689,14 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-12 col-lg-4">
         </div>
       </div>
     </div>
   </section>
   <!--/ Section Portfolio End /-->
 
-  <!--/ Section Contact-Footer Star /-->
+  <!--/ Section Contact-Footer Start /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
