--- a/index.html
+++ b/index.html
@@ -750,15 +750,12 @@
                 <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
-                      Get in Touch
+                      Let's Connect!
                     </h5>
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                      expedita aperiam aliquid at.
-                      Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                      mollitia inventore?
+                      I'm always on the lookout for new challenges and opportunities to grow. Whether you're interested in discussing a potential project, exploring a job opportunity, or simply want to share ideas and learn more about my work, I'd love to hear from you.
                     </p>
                     <ul class="list-ico">
                       <li><span><i class="fas fa-phone"></i></span>(+34) 609529495</li>
